# fastapi-dynamodb-api-template

./: .env.example  Dockerfile  README.md  docker-compose.yml  lambda_handler.py  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  __main__.py  application.py  lifespan.py  log.py  settings.py
app/api/: __init__.py  router.py
app/api/notes/: __init__.py  router.py  routes.py  views.py
app/db/: connection.py
app/db/dao/: note_dao.py
app/db/models/: __init__.py
app/middleware/: __init__.py  security.py
app/utils/: __init__.py  credentials.py
pets/: __init__.py  __main__.py  application.py  lifespan.py  log.py  settings.py
pets/api/: router.py
pets/api/docs/: __init__.py
pets/api/monitoring/: __init__.py
pets/api/notes/: __init__.py  router.py
pets/api/test/: __init__.py  schema.py  views.py
pets/db/: connection.py
pets/db/dao/: __init__.py  note_dao.py
pets/db/models/: __init__.py  note.py
pets/utils/: credentials.py  secrets.py
pets/web/: __init__.py  application.py
pets/web/api/: __init__.py  router.py
pets/web/api/docs/: __init__.py
pets/web/api/monitoring/: __init__.py
pets/web/api/notes/: __init__.py  router.py  views.py
pets/web/api/test/: __init__.py  views.py
tests/: __init__.py  conftest.py
