[tool.poetry]
name = "PETS"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.1,<4"
fastapi = "^0.117.1"
uvicorn = { version = "^0.36.1", extras = ["standard"] }
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
yarl = "^1.20.1"
ujson = "^5.11.0"
aiofiles = "^24.1.0"
httptools = "^0.6.4"
boto3 = "^1.39.9"
aioboto3 = "^15.1.0"
mangum = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^7"
anyio = "^4"
pytest-env = "^1.1.5"
httpx = "^0.28.1"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "PETS_ENVIRONMENT=pytest",
    "PETS_DB_BASE=admin",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
